# YANNI

./: .cproject  .project  CMakeLists.txt  README.md  common.cpp  common.h  draw_windows.cpp  gnunet.cpp  gnunet_test.cpp  gnunets.cpp  logicinput.txt  yanni.cpp  yanni_test.cpp
Images/: bmp_handler.cpp  bmp_handler.h
activation/: activation.h  fixedinput.hpp  logistic.hpp  powern.hpp  rectify.hpp  step.hpp  tanh.hpp
common/: CMakeLists.txt  common.cpp  common.h
fileio/: CMakeLists.txt  fileio.cpp  fileio.h
helper/: CMakeLists.txt  console_printer.cpp  console_printer.h  fileio.cpp  fileio.h  nnhelper.hpp  parser.cpp  parser.h  randomizer.cpp  randomizer.h  workspace.cpp  workspace.h
interpreter/: CMakeLists.txt  classic_network.cpp  commands.h  eval_network.cpp  parser.cpp  parser.h  plot_square.cpp  reset_network.cpp  retrain_network.cpp  scale_network.cpp  set_io.cpp  train_network.cpp  use_network.cpp  validate_network.cpp
networks/: CMakeLists.txt  classic_network.h  feature_net.h  fullhidden.cpp  fullhidden.cpp.autosave  fullhidden.h  taylornet.cpp  taylornet.h
networks/activation/: CMakeLists.txt  activation.h  fixedinput.hpp  logistic.hpp  powern.hpp  rectify.hpp  step.hpp  tanh.hpp
networks/parts/: CMakeLists.txt  edge.cpp  edge.h  edge_phantom.h  layer.cpp  layer.h  node.cpp  node.h  node_phantom.h
parts/: edge.cpp  edge.h  edge_phantom.h  layer.cpp  layer.h  node.cpp  node.h  node_phantom.h
